[workspace]
members = [
    "del-cudarc-kernel"]
resolver = "2"

[package]
name = "del-cudarc"
description = "utility funcs for cudarc"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies.cudarc]
version = "=0.12.1" # for candle v0.8.2
features = [
    "std", "driver", "nvrtc", "cuda-version-from-build-system", "dynamic-linking"]
default-features=false

[dependencies]
anyhow = "1.0.95"
rand = "0.9.0"
rand_chacha = "0.9.0"

# for develop
# del-cudarc-kernel = { path = "del-cudarc-kernel" }
del-cudarc-kernel = "0.1.0"



