[workspace]
members = [
    "del-cudarc-kernel",
    "del-cudarc-dlpack",
    "del-cudarc-safe",
    "del-cudarc-sys"
]
resolver = "2"

[workspace.package]
description = "utility funcs for cudarc"
version = "0.1.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
pyo3 = "0.24.1"
rand = "0.9.1"
rand_chacha = "0.9.0"
dlpack = "0.2.0"

##################
# for develop/push
# internal
del-cudarc-kernel = { path = "del-cudarc-kernel" }
del-cudarc-sys = { path = "del-cudarc-sys" }
# this version comes from candle library
cudarc = { version = "=0.16.0", features = ["std", "driver", "nvrtc", "cuda-version-from-build-system", "dynamic-linking"], default-features = false}

############
# for deploy
# del-cudarc-kernel = "0.1.0"
# for deploy ( this version is constrained by the candle 0.8.2)
# cudarc = { version = "=0.12.1", features = ["std", "driver", "nvrtc", "cuda-version-from-build-system", "dynamic-linking"], default-features = false}


