[package]
name = "del-canvas-cuda-gl"
description = "hogehoge"
version.workspace =true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
num-traits.workspace = true
slice-of-array.workspace = true
itertools.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
image.workspace = true
cudarc.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-gl-core.workspace = true
del-gl-winit-glutin.workspace = true
del-raycast-core.workspace = true
del-canvas-image.workspace = true
del-canvas-cpu.workspace = true
del-canvas-cuda-kernel.workspace = true
del-canvas-cuda.workspace = true

[build-dependencies]
gl_generator.workspace = true
cfg_aliases.workspace = true
bindgen_cuda.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true