[package]
name = "del-canvas-cuda"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
num-traits.workspace = true
slice-of-array.workspace = true
itertools.workspace = true
cudarc.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-gl-core.workspace = true
del-canvas-cpu.workspace = true
del-canvas-image.workspace = true
del-cudarc-util.workspace = true
kernel-splat.workspace = true
kernel-bvh.workspace = true
kernel-util.workspace = true

[build-dependencies]
bindgen_cuda.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true