[package]
name = "del-cudarc-dlpack"
version.workspace = true
edition.workspace = true

[lib]
name = "del_cudarc_dlpack"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
dlpack.workspace = true
cudarc.workspace = true
del-cudarc-kernel.workspace = true
del-cudarc-sys.workspace = true





