[package]
name = "del-cudarc-sys"
version.workspace = true
edition.workspace = true

[dependencies]
#del-cudarc-kernel.workspace = true
del-cudarc-kernels.workspace = true
#del-cudarc-thrust.workspace = true
# del-cudarc-thrust = { path = "../del-cudarc-thrust"}
del-cudarc-thrust = { path = "../del-cudarc-thrust" }
cudarc.workspace = true
dashmap = "6.1.0"

[dev-dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"



