[package]
name = "del-fem-cudarc-kernel"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cudarc.workspace = true
num-traits.workspace = true
anyhow.workspace = true
slice-of-array.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true

[build-dependencies]
bindgen_cuda.workspace = true
